--- a/src/app/user/components/user-list/user-list.component.scss
+++ b/src/app/user/components/user-list/user-list.component.scss
@@ -28,6 +28,7 @@
   border-radius: 6px;
   box-shadow: $shadow-primary;
   padding-bottom: 78px;
+  overflow-x: auto;
 }
 
 @media(max-width: 1200px) {
@@ -43,4 +44,10 @@
       margin-top: 40px;
     }
   }
+}
+
+@media(max-width: 560px) {
+    .content {
+        padding: 60px 23px 23px 23px;
+    }
 }
